<package format="3">
  <name>octomap</name>
  <version>1.0.0</version>
  <description>octovis is visualization tool for the OctoMap library based on Qt and libQGLViewer. See
  http://octomap.github.io for details.</description>

  <author email="anasarrak@erlerobotics.com">Anas M'chichou</author>
  <maintainer email="anasarrak@erlerobotics.com">Anas M'chichou</maintainer>
  <license>GPLv2</license>

  <url type="website">http://octomap.github.io</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap/issues</url>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>octomap</build_depend>

  <exec_depend>octomap</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
