<package format="3">
  <name>octovis</name>
  <version>1.9.0</version>
  <description>octovis is visualization tool for the OctoMap library based on Qt and libQGLViewer. See
  http://octomap.github.io for details.</description>

  <author email="wurm@informatik.uni-freiburg.de">Kai M. Wurm</author>
  <author email="armin@hornung.io">Armin Hornung</author>
  <maintainer email="anasarrak@erlerobotics.com">Anas M'chichou</maintainer>
  <maintainer email="armin@hornung.io">Armin Hornung</maintainer>
  <license>GPLv2</license>

  <url type="website">http://octomap.github.io</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap/issues</url>


  <!-- <run_depend>catkin</run_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>octomap</build_depend>
  <build_depend>libqglviewer-qt4-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libqt4-opengl-dev</build_depend>

  <exec_depend>octomap</exec_depend>
  <exec_depend>libqglviewer-qt4</exec_depend>
  <exec_depend>libqtgui4</exec_depend>
  <exec_depend>libqt4-opengl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
